# project-2

./: README.md
event-server/: Dockerfile  deployment.yaml  index.js  package-lock.json  package.json  service.yaml
financial-agent/: Dockerfile  langgraph.json  pyproject.toml
financial-agent/analyst/: env.py  graph.py  state.py
financial-agent/analyst/entity_recognizer/: node.py
financial-agent/analyst/entity_recognizer/prompt/: prompt.md
financial-agent/analyst/entity_recognizer/tools/: finsearch.py  search.py
financial-agent/analyst/investment_analyzer/: node.py
financial-agent/analyst/investment_analyzer/prompt/: prompt.md
financial-agent/analyst/investment_analyzer/tools/: yfinance_tool.py
financial-agent/analyst/sentiment_analyzer/: node.py
flink-operator/: Dockerfile  config.yaml  long-term-application.yaml  long_term_profiling.py  medium-term-application.yaml  medium_term_profiling.py  rbac.yaml  short-term-application.yaml  short_term_profiling.py  similar-recommend-application.yaml  similar_recommend.py
flink-operator/similar-grouping/: Dockerfile  group.yaml  grouping-process.py  sample.yaml  similarity-process.py
