[project]
name = "financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "langchain-anthropic>=0.3.20",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.8",
    "langgraph-cli>=0.4.3",
    "langgraph-sdk>=0.2.9",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "yfinance>=0.2.66",
]

[tool.setuptools]
packages = ["analyst"]

[dependency-groups]
dev = [
    "langgraph-api>=0.4.29",
    "langgraph-cli>=0.4.2",
]
